Bug 59259 - With some master pages, freezes when try to print
Summary: With some master pages, freezes when try to print
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0.0.1 rc
Hardware: Other All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:4.0.3 target:4.1.0
Keywords: regression
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2013-01-11 22:24 UTC by Marco Menardi
Modified: 2013-04-26 08:28 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Menardi 2013-01-11 22:24:23 UTC
Run Impress (Debian GNU/Linux 64, confirmed by other person with Windows 7 x64, libreoffice 4.0RC1), select one of the following "master pages": sunset metropolis vintage.
Then "File -> Print..."
behaviour expected:
the print dialog should show up
What happens:
program just freezes (CPU is not 100%, but even so also the UI, KDE in my case, seems trashing until you kill LiBo)
Comment 1 Jorendc 2013-01-11 22:47:04 UTC
I can confirm this behavior, using 'Sunset', 'Metropolis' or 'Vintage' layout. I also can add that selecting one of this 'Master pages' will result in a short 'freeze' (1 second or so). When file -> print, a complete freeze. After a while I can use the dialog again. 

Good catch Marco!
Comment 2 Petr Mladek 2013-01-29 18:31:05 UTC
All these templates are using SVG picture on the background. LO-4.0 started to use another library to read SVG pictures, so it is most likely related.

I add some Draw and Writer hackers into CC.
Comment 3 Petr Mladek 2013-01-29 18:58:00 UTC
Hmm, I am able to print to file on openSUSE-12.2-x86_64 with 4.0.0.2 packages. But it takes ages.

Observation: 1 slide in the generated postscript has the following size:

      + 5.1 MB with Sunset SVG background
      + 0.4 MB with DNA PNG background

I guess that we generate very high resolution when printing SVG pictures.
Comment 4 Petr Mladek 2013-02-04 10:30:39 UTC
Hmm, I would not block the 4.0.0 release because of this problem. The print takes ages but it is possible. .0 release is intended for early adopters and might include even annoying bugs. Though, we should fix it ASAP => slightly lowering severity and adding into MABs
Comment 5 Marco Menardi 2013-02-04 19:10:35 UTC
(In reply to comment #4)
> Hmm, I would not block the 4.0.0 release because of this problem. The print
> takes ages but it is possible. .0 release is intended for early adopters and
> might include even annoying bugs. Though, we should fix it ASAP => slightly
> lowering severity and adding into MABs

Well, let's say that 50% of Impress users are using those templates, and for them printing is essentially broken (takes ages = unusable/hangs/perception that does no work and it's frozen).
In addition is a regression (don't know technically, but an user passes from a release where this works to one that does not)
We are going to upset a lot of people and receive a lot of bad reviews due to this ("there is some new interesting feature but impress printing is broken, a sigh of the low quality of the suite/development/whatever").
Do we have some hurry or better release when most problematic bugs are fixed?
I would do the latter
Comment 6 ape 2013-03-20 12:00:59 UTC
Look at bug 62461 please.
Comment 7 Rainer Bielefeld Retired 2013-04-16 15:29:00 UTC
Something went wrong here, this one has nothing to do with Bug 63585
Comment 8 Commit Notification 2013-04-24 14:31:12 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b39358aaf723b26b5effb7245f38ad960cc609a&h=libreoffice-4-0

fdo#59259: Suppress the expensive parts when we are only writing to metafile.


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Jan Holesovsky 2013-04-24 14:32:35 UTC
Fixed now.  Really nasty, thank you for the report!
Comment 10 Commit Notification 2013-04-24 14:39:22 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=617dddda6258d63d7f2307f38322a411670e6ed8

fdo#59259: Suppress the expensive parts when we are only writing to metafile.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-04-26 08:28:48 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-4-0-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8e94a05fcc4906e06f0f283432b73470974d588&h=libreoffice-4-0-3

fdo#59259: Suppress the expensive parts when we are only writing to metafile.


It will be available already in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.